--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -23,6 +23,14 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+a {
+	text-decoration: none;
+	color: black;
+}
+
+a:hover {
+	color: #B1663C;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -192,6 +200,13 @@ margin: auto;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
+.hidden {
+	display: none;
+}
+.badLogin {
+	margin-top: 1.5em;
+	color: red;
+}
 input[type="submit"]{
 	font-family: 'Syne';
 	font-weight: 700;
@@ -203,9 +218,25 @@ input[type="submit"]{
 	border-radius: 60px ;
 }
 
+footer {
+	position: absolute;
+	left: 0;
+	width: 100%;
+}
+
+footer.loginFooter {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+}
+
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em;
 }
 
+.loginbackground {
+	background-color: #FFFEF8;  
+}
