ajout d'un curseur pointeur quand on survole les boutons

--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -421,3 +421,6 @@ footer nav ul {
 .loginbackground {
 	background-color: #FFFEF8;  
 }
+.filter:hover, .deleteButton:hover, .modalAddPhoto:hover, .modalAddPhoto-close:hover, .modalGallery:hover, .modalGallery-close:hover, input[type="submit"]:hover, #logout:hover {
+	cursor:pointer;
+}
