--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -60,6 +60,7 @@ body {
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	background-color: #FFFEF8;
 }
 header {
 	display: flex;
@@ -140,6 +141,9 @@ li:hover {
 
 #introduction p {
 	margin-bottom: 0.5em;
+}
+#portfolio {
+	margin: 150px 0 50px 0;
 }
 #portfolio h2 {
 	text-align: center;
@@ -294,9 +298,7 @@ li:hover {
 	display: flex;
 	justify-content: space-between;
 	width: 60%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 4em;
+	margin: 2em auto 4em auto;
 }
 .filter{
 	border: solid 1px #1D6154;
@@ -356,7 +358,10 @@ margin: auto;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-
+#passwordForgotten {
+	display: flex;
+	justify-content: center;
+}
 .hidden {
 	display: none;
 }
@@ -403,6 +408,7 @@ footer {
 	position: absolute;
 	left: 0;
 	width: 100%;
+	background-color: white;
 }
 
 footer.loginFooter {
