--- a/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
+++ b/Portfolio-architecte-sophie-bluel-master/FrontEnd/assets/style.css
@@ -240,12 +240,24 @@ li:hover {
 	background-color: #E8F1F6;
 	cursor: pointer;
 }
+#defaultAddPhotoDisplay {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+#preview {
+	height: 14em;
+	object-fit: contain;
+	display: none;
+}
 
 .cardAjouterPhoto:hover {
 	background-color: #e2eaee;
 }
 
-.cardAjouterPhoto div {
+#defaultAddPhotoDisplay div {
 	margin-top: 1em;
 	margin-bottom: 0.5em;
 	background-color: #B9C5CC;
@@ -279,6 +291,10 @@ li:hover {
 #photoAdded {
 	margin-top: 0.3em;
 	color: green;
+}
+
+#filePhoto {
+	display: none;
 }
 
 #output {
@@ -329,7 +345,7 @@ li:hover {
 }
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 #contact > * {
 	text-align: center;
